# maia

./: .gitignore  Cargo.toml  README.md  dprint.json  rust-toolchain.toml
.github/workflows/: ci.yml
maia/: Cargo.toml
maia-core/: Cargo.toml
maia-core/src/: interval.rs  lib.rs  protocol.rs
maia-core/src/protocol/: transaction_ext.rs
maia/src/: interval.rs  lib.rs  oracle.rs  protocol.rs
maia/src/protocol/: sighash_ext.rs  transactions.rs  txin_ext.rs
maia/tests/: cfds.rs
src/: lib.rs  oracle.rs  protocol.rs
src/protocol/: sighash_ext.rs  transaction_ext.rs  transactions.rs
tests/: cfds.rs
