[package]
name = "maia"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1"
bdk = { version = "0.12", default-features = false }
bit-vec = "0.6"
itertools = "0.10"
rand = "0.8"
secp256k1-zkp = { version = "0.5", features = ["bitcoin_hashes", "global-context", "serde"] }
thiserror = "1"

[dev-dependencies]
bitcoin = { version = "0.27", features = ["rand", "bitcoinconsensus"] }
proptest = { version = "1", default-features = false, features = ["std"] }

[patch.crates-io]
secp256k1-zkp = { git = "https://github.com/ElementsProject/rust-secp256k1-zkp" } # Latest master has crucial patches.
