[package]
name = "maia"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
bdk = { version = "0.19", default-features = false }
itertools = "0.10"
maia-core = { git = "https://github.com/comit-network/maia", rev = "e419cb2cf19bed6ec53eaa3672408a6205a9b705", package = "maia-core" } # Pin the maia-core version to before breaking change
rand = "0.6"
secp256k1-zkp = { version = "0.5", features = ["bitcoin_hashes", "global-context", "serde"] }
thiserror = "1"

[dev-dependencies]
bitcoin = { version = "0.27", features = ["rand", "bitcoinconsensus"] }
proptest = { version = "1", default-features = false, features = ["std"] }
