[package]
name = "maia"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
bdk = { version = "0.21", default-features = false }
itertools = "0.10"
maia-core = { git = "https://github.com/comit-network/maia", tag = "0.1.1", package = "maia-core" } # Pin the maia-core version to latest v0.1 for backwards compatibility downstream
rand = "0.6"
secp256k1-zkp = { version = "0.6", features = ["bitcoin_hashes", "global-context", "serde"] }
thiserror = "1"

[dev-dependencies]
bitcoin = { version = "0.28.1", features = ["rand", "bitcoinconsensus"] }
proptest = { version = "1", default-features = false, features = ["std"] }
